fixing the action && refactoring while waiting